# neuroprocessor_labs

./: CMakeLists.txt  FindSystemC.cmake  main.cpp
hardware/: CMakeLists.txt
hardware/include/: accelerator.hpp  control_signal_unit.hpp  pe.hpp  tensor_unit.hpp  top.hpp
hardware/source/: accelerator.cpp  control_signal_unit.cpp  pe.cpp  tensor_unit.cpp  top.cpp
software/: CMakeLists.txt
software/include/: defines.hpp  types.hpp
software/source/: types.cpp
